fix: syntax bug

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Upload artifacts
+      - name: Upload Pages artifacts
         uses: actions/upload-artifact@v3
         with:
           path: config/node/frontend/build
