--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,13 @@ name: Deploy react app to gh pages
 on:
   push:
     branches:
-      -main
+      - main
 
 permissions:
   contents: read
   pages: write
   id-token: write
+  actions: read
 
 concurrency:
   group: "pages"
@@ -21,36 +22,37 @@ jobs:
       run:
         working-directory: config/node/frontend
 
+
     steps:
-      - name: Checkout1
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 24
-          cashe: nmp
+          node-version: 18
+          cache: npm
           cache-dependency-path: config/node/frontend/package-lock.json
-      
+
       - name: Install dependencies
-        run: npm cl
+        run: npm ci
 
       - name: Build
         run: npm run build
 
-      - name: Upload Pages artifacts
-        uses: actions/upload-artifact@v3
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: config/node/frontend/build
 
   deploy:
     environment:
       name: github-pages
-      url: ${{steps.deployment.outputs.page_url}}
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
 
     steps:
       - name: Deploy to gh pages
         id: deployment
-        uses: actions/deploy-page@v4
+        uses: actions/deploy-pages@v4
