--- a/.github/workflows/shr_a.yml
+++ b/.github/workflows/shr_a.yml
@@ -13,6 +13,6 @@ jobs:
     runs-on:
       - self-hosted
   steps:
-    - uses: actions/checkout@v3
+    - user: actions/checkout@v3
     - name: Print
       run: echo 'witaj'
