--- a/.github/workflows/shr_a.yml
+++ b/.github/workflows/shr_a.yml
@@ -13,6 +13,6 @@ jobs:
     runs-on:
       - self-hosted
   steps:
-    - user: actions/checkout@v3
-    - name: Print
+    user: actions/checkout@v3
+    name: Print
       run: echo 'witaj'
