--- a/.github/workflows/shr_a.yml
+++ b/.github/workflows/shr_a.yml
@@ -12,7 +12,7 @@ jobs:
     name: Build & push
     runs-on:
       - self-hosted
-  steps:
-    user: actions/checkout@v3
-    name: Print
-      run: echo 'witaj'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Print
+        run: echo 'witaj'
