--- a/.github/workflows/shr_a.yml
+++ b/.github/workflows/shr_a.yml
@@ -3,16 +3,25 @@ on:
   push:
     branches:
       - env-test
+
 permissions:
   contents: read
   packages: write
 
 jobs:
   build-and-push:
-    name: Build & push
-    runs-on:
-      - self-hosted
+    name: Build & Push
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v3
-      - name: Print
-        run: echo 'witaj'
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Uruchom docker-compose
+        env:
+          ENV_NAME: ${{github.ref_name}}
+          POSTGRES_PORT: ${{secrets.POSTGRES_PORT}}
+          #DB
+          POSTGRES_DB: ${{secrets.POSTGRES_DB}}
+          POSTGRES_USER: ${{secrets.POSTGRES_USER}}
+          POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+        run: |
+          docker-compose -f ./docker-compose/docker-compose-remote.yml -p remote-prge up --build -d
