--- a/.github/workflows/shr_a.yml
+++ b/.github/workflows/shr_a.yml
@@ -12,6 +12,7 @@ jobs:
   build-and-push:
     name: Build & Push
     runs-on: self-hosted
+    environmant: ${{github.ref_name}}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
