--- a/docker-compose/docker-compose-remote.yml
+++ b/docker-compose/docker-compose-remote.yml
@@ -19,4 +19,17 @@ services:
     volumes:
       - postgis-local-data:/var/lib/postgresql/data
 
+  geoserver:
+    build:
+      context: .. 
+      dockerfile: docker/geoserver/Dockerfile
+    image: "prge_2025_geoserver"
+    container_name: prge-2025-geoserver-${ENV_NAME}
+    ports:
+      - $
+    volumes:
+      - ../.tmp/data-${ENV_NAME}:/opt/geoserver_data
+    
 
+volumes:
+  postgis-local-data:
