--- a/docker-compose/docker-compose-remote.yml
+++ b/docker-compose/docker-compose-remote.yml
@@ -15,7 +15,7 @@ services:
       - *env-postgres-user
       - *env-postgres-password
     ports:
-      - ${POSTGRES_PORT}.5432
+      - ${POSTGRES_PORT}:5432
     volumes:
       - postgis-local-data:/var/lib/postgresql/data
 
