--- a/docker-compose/docker-compose-remote.yml
+++ b/docker-compose/docker-compose-remote.yml
@@ -26,7 +26,7 @@ services:
     image: "prge_2025_geoserver"
     container_name: prge-2025-geoserver-${ENV_NAME}
     ports:
-      - $
+      - ${GEOSERVER_PORT}:8080
     volumes:
       - ../.tmp/data-${ENV_NAME}:/opt/geoserver_data
     
