--- a/docker-compose/docker-compose-local.yml
+++ b/docker-compose/docker-compose-local.yml
@@ -1,4 +1,4 @@
-x-environment: &env-all
+x-environment: 
   - &env-postgres-db POSTGRES_DB=${POSTGRES_DB}
   - &env-postgres-user POSTGRES_USER=${POSTGRES_USER}
   - &env-postgres-password POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
