--- a/docker-compose/docker-compose-remote.yml
+++ b/docker-compose/docker-compose-remote.yml
@@ -29,6 +29,19 @@ services:
       - ${GEOSERVER_PORT}:8080
     volumes:
       - ../.tmp/data-${ENV_NAME}:/opt/geoserver_data
+
+  fastapi:
+    build:
+      context: .. 
+      dockerfile: docker/fastapi/Dockerfile
+    image: "prge_2025_fastapi"
+    container_name: envtest_prge-2025-fastapi-${ENV_NAME}
+    environment:
+      - *env-postgres-db
+      - *env-postgres-user
+      - *env-postgres-password
+    ports:
+      - ${FASTAPI_PORT}:10000
     
 
 volumes:
