--- a/.github/workflows/shr_a.yml
+++ b/.github/workflows/shr_a.yml
@@ -23,9 +23,9 @@ jobs:
           ENV_NAME: ${{github.ref_name}}
           POSTGRES_PORT: ${{secrets.POSTGRES_PORT}}
           GEOSERVER_PORT: ${{secrets.GEOSERVER_PORT}}
+          FASTAPI_PORT: ${{secrets.FASTAPI_PORT}}
           #DB
           POSTGRES_DB: ${{secrets.POSTGRES_DB}}
           POSTGRES_USER: ${{secrets.POSTGRES_USER}}
           POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
-        run: |
-          docker-compose -f ./docker-compose/docker-compose-remote.yml -p remote-prge up --build -d
+        run: docker-compose -f ./docker-compose/docker-compose-remote.yml -p remote-prge up --build -d
