--- a/docker-compose/docker-compose-local.yml
+++ b/docker-compose/docker-compose-local.yml
@@ -45,6 +45,26 @@ services:
     ports:
       - 10000:10000
 
+  node:
+    build:
+      context: ..
+      dockerfile: docker/node/Dockerfile
+    image: 'prge_2025_node'
+    container_name: 'prge_2025_node'
+    volumes:
+      - ../config/node/frontend/src:/app/src
+      - ../config/node/frontend/package.json:/app/package.json
+      - ../config/node/frontend/package-lock.json:/app/package-lock.json
+    ports:
+      - 3000:3000
+    environment:
+      - CHOCKIDAR_USEPOLLING=TRUE
+      - WATCHPACK_POLLING=true
+
+
+
+    
+
 
 volumes:
   postgis-local-data:
