feat: nginx many things

--- a/docker-compose/docker-compose-local.yml
+++ b/docker-compose/docker-compose-local.yml
@@ -63,7 +63,15 @@ services:
 
 
 
-    
+  nginx:
+    build:
+      context: ..
+      dockerfile: docker/nginx/Dockerfile_local
+    image: 'prge_2025_nginx'
+    container_name: 'prge_2025_nginx'
+    ports:
+      - 8090:80
+
 
 
 volumes:
