--- a/config/node/frontend/package.json
+++ b/config/node/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://JZalauga.github.io/prge_jz",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
