--- a/docker/nginx/Dockerfile_remote
+++ b/docker/nginx/Dockerfile_remote
@@ -10,7 +10,7 @@ RUN npm run build
 
 FROM nginx:alpine
 
-COPY config/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY config/nginx/nginx.conf /etc/nginx/configure.d/default.conf
 
 COPY --from=build /app/build /usr/share/nginx/html
 
